✨ Add get all task and display

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,3 +1,10 @@
+.card {
+  padding: 16px 24px;
+  border-radius: 16px;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
 .modalBox {
   position: absolute;
   top: 50%;
